# virtual-sound-card

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  jack_demo.bat  jack_demo.sh
.github/workflows/: README.md  build-matrix.yml  ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/common/: Makefile  cmake_install.cmake
_codeql_build_dir/linux/: Makefile  cmake_install.cmake  jack_sine_generator
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_api_init  test_jack_availability  test_sine_generator  test_sine_wave_file
cmake/: FindJACK.cmake
common/: CMakeLists.txt  README.md  jack_sine_generator.c  sine_generator.c  sine_generator.h  vcard.h  vcard_common.c
docs/: API.md  ARCHITECTURE.md  JACK2_INTEGRATION.md  README.md  WAVEFORMATEXTENSIBLE_SUPPORT.md
linux/: CMakeLists.txt  Makefile  QUICKSTART.md  README.md  demo.sh  demo_jack.sh
linux/tests/: test_loopback_read.c
linux/userspace/: jack_sine_generator.c  sine_generator_app.c
macos/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  VIRTUAL_DEVICE.md  demo.sh  demo_jack.sh
macos/tests/: test_loopback_read.c  test_virtual_sine_device.c
macos/userspace/: jack_sine_generator.c  setup_virtual_device.sh  sine_generator_app.c  virtual_sine_device.c
tests/: CMakeLists.txt  README.md  test_api_init.c  test_jack_availability.c  test_jack_connection.c  test_sine_generator.c  test_sine_wave_file.c  test_windows_format_extensible.c
windows/: CMakeLists.txt  Makefile  QUICKSTART.md  README.md  demo.bat  demo_jack.bat
windows/tests/: test_format_handling.c  test_loopback_read.c
windows/userspace/: jack_sine_generator.c  sine_generator_app.c  virtual_sine_device.c
